--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
               <goal>shade</goal>
             </goals>
             <configuration>
-              <finalName>forecast-app</finalName>
+              <finalName>Forecast App JAVA v11</finalName>
               <shadedArtifactAttached>true</shadedArtifactAttached>
               <transformers>
                 <transformer implementation=
